--- a/CQ_APP/CQ_APP.vcxproj
+++ b/CQ_APP/CQ_APP.vcxproj
@@ -11,20 +11,27 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="admin_list.cpp" />
     <ClCompile Include="app.cpp" />
     <ClCompile Include="appinfo.h" />
     <ClCompile Include="appmain.cpp" />
+    <ClInclude Include="admin_list.h" />
+    <ClInclude Include="command.h" />
+    <ClInclude Include="command\admin.h" />
     <ClInclude Include="command\ping.h" />
     <ClInclude Include="command\reload.h" />
+    <ClCompile Include="command.cpp" />
+    <ClCompile Include="command\admin.cpp" />
     <ClCompile Include="command\ping.cpp" />
     <ClCompile Include="command\reload.cpp" />
-    <ClCompile Include="command\repeat.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="handle_event\repeat.cpp" />
     <ClCompile Include="Msg.cpp" />
     <ClCompile Include="util\common.cpp" />
     <ClCompile Include="util\config.cpp" />
     <ClCompile Include="util\time_manager.cpp" />
     <ClCompile Include="源.cpp" />
+    <ClInclude Include="handle_event\repeat.h" />
     <ClInclude Include="util\common.h" />
     <ClInclude Include="util\config.h" />
     <ClInclude Include="util\singleton.h" />
@@ -33,7 +40,6 @@
   <ItemGroup>
     <ClInclude Include="app.h" />
     <ClInclude Include="appVer.h" />
-    <ClInclude Include="repeat.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -87,6 +93,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;CQ_APP_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessToFile>false</PreprocessToFile>
       <BrowseInformation>true</BrowseInformation>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -106,6 +113,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;CQ_APP_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
