--- a/CQ_APP/CQ_APP.vcxproj
+++ b/CQ_APP/CQ_APP.vcxproj
@@ -27,11 +27,15 @@
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="handle_event\repeat.cpp" />
     <ClCompile Include="Msg.cpp" />
+    <ClCompile Include="socket\address.cpp" />
+    <ClCompile Include="socket\socket.cpp" />
     <ClCompile Include="util\common.cpp" />
     <ClCompile Include="util\config.cpp" />
     <ClCompile Include="util\time_manager.cpp" />
     <ClCompile Include="源.cpp" />
     <ClInclude Include="handle_event\repeat.h" />
+    <ClInclude Include="socket\address.h" />
+    <ClInclude Include="socket\socket.h" />
     <ClInclude Include="util\common.h" />
     <ClInclude Include="util\config.h" />
     <ClInclude Include="util\singleton.h" />
@@ -90,7 +94,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;CQ_APP_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_WINDOWS;_USRDLL;CQ_APP_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessToFile>false</PreprocessToFile>
       <BrowseInformation>true</BrowseInformation>
       <LanguageStandard>stdcpp17</LanguageStandard>
@@ -112,7 +116,7 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;CQ_APP_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_WINDOWS;_USRDLL;CQ_APP_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
